--- a/styles/main.css
+++ b/styles/main.css
@@ -102,7 +102,7 @@ option.selected {
 blockquote {
     background-color: #e0ddc4;
     padding: 15px;
-    -moz-border-radius: 3px;
+    border-radius: 3px;
     font-size: 21px;
     margin: 10px 0px;
 }
@@ -124,7 +124,7 @@ blockquote {
     background: #7c3111;
     background: #d9d5bf;
     padding: 7px 10px;
-    -moz-border-radius: 3px;
+    border-radius: 3px;
 }
 
 #wrapper {
@@ -171,7 +171,7 @@ blockquote {
     right: 0px;
     width: 400px;
     background-color: #dddbc4;
-    -moz-border-radius: 3px;
+    border-radius: 3px;
     padding: 10px;
     margin-top: 20px;
 }
@@ -216,19 +216,21 @@ blockquote {
 textarea.quote_text {
     font-size: 21px;
     border: 0;
-    -moz-border-radius: 3px;
+    border-radius: 3px;
     padding: 5px 10px;
     height: 180px;
+    box-sizing: border-box;
 }
 
 .button {
-    background-color: #6c3219;
+    background-color: #4e2613;
     color: #d46334;
     border: 0;
-    padding: 3px 7px;
-    -moz-border-radius: 3px;
-    font-size: 17px;
+    padding: 14px;
+    border-radius: 3px;
+    font-size: 28px;
     cursor: pointer;
+    text-transform: uppercase;
 }
 
 .button:hover {
@@ -262,7 +264,7 @@ textarea.quote_text {
     background-color: #d3d0b4;
     border: 2px solid #bab691;
     padding: 2px;
-    -moz-border-radius: 2px;
+    border-radius: 2px;
 }
 
 .author input.field {
@@ -290,7 +292,7 @@ textarea.quote_text {
 /* Footer */
 #footer {
     background: transparent url('../images/bg_footer-left.gif') no-repeat bottom left;
-    width: 336px;
+    width: 100%;
     height: 591px;
     position: absolute;
     bottom: 0;
@@ -300,7 +302,7 @@ textarea.quote_text {
 
 .copyright {
     font-weight: bolder;
-    font-size: 12px;
+    font-size: 21px;
     position: absolute;
     left: 50px;
     bottom: 25px;
@@ -310,4 +312,17 @@ textarea.quote_text {
 .hidden {
     display: none;
     visibility: hidden;
+}
+
+.menu {
+    font-size: 24px;
+    text-align: center;
+    margin: 12px 0;
+}
+
+.menu a {
+    background: rgba(0,0,0,.1);
+    padding: 4px;
+    margin: 0 12px;
+    border: 1px solid currentColor;
 }
